2010-03-11 Alberto Garcia <agarcia@igalia.com>

	* src/util.cc (get_device_mode): Set the telephony service state when
	requesting OFFLINE mode.

2010-03-04 Víctor Manuel Jáquez Leal <vjaquez@igalia.com>

	* apt-worker.cc (fs_setup): New function.
	(fs_teardown): New function.
	(do_rescue): use the new functions

2010-02-25 Víctor Manuel Jáquez Leal <vjaquez@igalia.com>

	* src/settings.cc: set to true the show_ssu_problems global
	variable by default

2010-02-23 Víctor Manuel Jáquez Leal <vjaquez@igalia.com>

	* src/operations.cc (ip_download_cur): Reset the cancel/break
	flags before every download

	* src/util.cc (iap_callback): Nullify the iap identifier after
	free it.

	* src/details.cc (spd_with_details): don't remove the tab if the
	setting is enabled.

2010-02-22 Víctor Manuel Jáquez Leal <vjaquez@igalia.com>

	* src/settings.h: export the global variable

	* src/settings.cc (load_settings): read the new key
	(save_settings): save the new key
	(make_settings_tab): put the option in the widget

2010-02-18 Víctor Manuel Jáquez Leal <vjaquez@igalia.com>

	* src/operations.cc (ip_download_cur_retry): reset entertainment
	state before downloading again.

	* src/util.cc (reset_entertainment): New function

	* src/util.h: New function exporting

	* src/operations.cc (ip_autoremove_reply): New function.
	(ip_reboot): call the autoremove apt-worker command.

	* src/apt-worker.cc (cmd_autoremove): Remove useless log messages

	* src/operations.cc (up_remove_reply): Stop the entertainment only
	if apt-worker fails.
	(up_remove_reply): Call the autoremove process.
	(up_autoremove_reply): New function.

2010-02-09 Mario Sanchez Prada <msanchez@igalia.com>

	* src/main.cc (rp_end): Make sure packages list is always
	initialized after restoring the list of packages.

2010-02-17 Víctor Manuel Jáquez Leal <vjaquez@igalia.com>

	* apt-worker-client.h: function signature
	src/apt-worker-client.cc (apt_worker_autoremove): New function.
